# forge

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/workflows/: release.yml
public/: manifest.json  sw.js
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityBar.svelte  BottomPanel.svelte  Breadcrumbs.svelte  ChatPanel.svelte  CommandPalette.svelte  ContextMenu.svelte  DiffView.svelte  Editor.svelte  FileTree.svelte  InstructorPanel.svelte  NotificationToast.svelte  OutputPanel.svelte  ProblemsPanel.svelte  ResizeHandle.svelte  SearchPanel.svelte  StatusBar.svelte  Terminal.svelte  TitleBar.svelte  WebAuth.svelte  WelcomeScreen.svelte
src/lib/: api.ts  languages.ts  tracks.ts
src/lib/tracks/: bash.ts  c.ts  cpp.ts  csharp.ts  go.ts  index.ts  java.ts  javascript.ts  kotlin.ts  lua.ts  php.ts  python.ts  ruby.ts  rust.ts  swift.ts  typescript.ts  zig.ts
src/lib/tracks/bash-lang/: index.ts  s01-hello-world.ts  s02-variables.ts  s03-quoting.ts  s04-expansion.ts  s05-conditionals.ts  s06-loops.ts  s07-functions.ts  s08-arrays.ts  s09-strings.ts  (+41 more)
src/main/: main.ts  preload.ts
src/renderer/: App.svelte  index.html  main.ts
src/renderer/components/: ChatPanel.svelte  Editor.svelte  FileTree.svelte  TitleBar.svelte  WelcomeScreen.svelte
src/renderer/stores/: app.svelte.ts
src/stores/: app.svelte.ts
src/styles/: global.css
(+766 files in other folders)
